[package]
name = "shadow-portal-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.26.0"
anchor-spl = "0.26.0"
reqwest = "0.11.14"
clockwork-sdk = {path = "../../clockwork/sdk"}
sha2 = "0.10.6"
runes = { git = "https://github.com/genesysgo/shadow-drive-rust", branch = "runes" }
chain-drive = { path = "../programs/chain-drive/", features = ["no-entrypoint"] }
chain-drive-demo = { path = "../programs/chain-drive-demo/", features = ["no-entrypoint"] }
rkyv = "0.7.40"
graph-demo-onchain = { path = "../programs/graph-demo-onchain/", features = ["no-entrypoint"] }
base58 = "0.2.0"
spl-associated-token-account = "1.0.5"
