[package]
name = "chain-drive"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "lib"]
name = "chain_drive"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
verbose = []
default = ["verbose"]

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
chrono = { version = "0.4.23", default-features = false }
clockwork-sdk = {git = "https://github.com/genesysgo/clockwork.git", branch = "sdrive"}
clockwork-cron = {git = "https://github.com/genesysgo/clockwork.git",  branch = "sdrive"}
sha2 = "0.10.6"
